# Concurrent-Website-Status-Logger

./: CMakeLists.txt  LICENSE.md  MainWindow.cpp  MainWindow.h  Monitor.cpp  Monitor.h  README.md  WebChecker.cpp  WebChecker.h  main.cpp
